--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -3,10 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-
 <head th:replace="fragments/head::headFragment">
-
-
+    <!--    <title th:layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">default</title> -->
 </head>
 
 <body>
