--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,15 +1,9 @@
-*{box-sizing: border-box}
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+/**{box-sizing: border-box}*/
 
-}
 
 .footer__container{
     height: 300px;
-    width: 1920px;
+    width: 100vw;
     background-color: black;
     color: white;
     display: flex;
