--- a/src/main/resources/static/css/regForm.css
+++ b/src/main/resources/static/css/regForm.css
@@ -1,193 +1,64 @@
-*{
-    box-sizing: border-box;
-}
 
-.wrap{
-    width: 1929px;
-    height: 1000px;
-    padding: 0px ;
+.reg_wrap{
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.join__area{
-    width: 400px;
-    height: 900px;
-    padding: 58px 0px 160px;
 
+
+.reg {
+    width: 560px;
+    padding: 20px;
+    border-radius: 12px;
+    background-color: #ffffff;
+    box-shadow: 5px 5px 10px  1px  rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 200px;
 }
 
-.join__title{
+.reg .logo{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.title{
-    padding: 0 0 42px;
-    font-size: 32px;
-    font-weight: bolder;
+.reg form{
+    font-size: 20px;
 }
 
-
-
-.input__box{
-    width: 100%;
-    height: 84px;
-    padding: 10px 0 14px;
-    margin: 0 0 5px;
-    
-    /* display: flex; */
-/* /    flex-direction: column; */
-
+.reg form .form-group{
+    margin-bottom: 12px;
 }
 
-.input__title{
-    font-size: 13px;
-}
-.input__txt{
-    width: 100%;
-    padding: 9px 0px 8px;
-    border: 0px;
-    border-bottom: 1px solid #ebebeb;
-    outline: none;
+.reg form input[type="submit"]{
+    font-size: 20px;
+    margin-top: 15px;
 
 }
-
-.email__box{
-    width: 100%;
+.reg form .form-group ul{
     display: flex;
-    flex-direction: column;
-    text-align: right;
-
-
-
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin-top: 10px;
 }
 
-.email__box{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    text-align: right;
+.reg form .form-group li{
+    font-size: 11px;
+    list-style: none;
+    float: left;
+    border-right: 1px solid #ebebeb;
+    padding: 0 10px;
 }
 
-.auth__box{
-    width: 100%;
-    margin-top: 5px;
-}
-.auth__box__content{
-    margin-top: 5px;
+.reg form .form-group li:nth-child(3){
+    border : none;
 }
 
-
-.phone__box{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    text-align: right;
+.reg form .form-group li a{
+    text-decoration: none;
+    color: black;
 }
-
-.reg__btn{
-    width: 100%;
-}
-.reg{
-    width: 100%;
-    height: 52px;
-    border-radius: 15px;
-    border: none;
-    color: white;
-    font-size: 17px;
-    font-weight: bold;
-    background-color: #ebebeb;
-    margin-top: 25px;
-
-}
-
-#valid_name{
-    font-size: 12px;
-    color: indianred;
-    display: inline-block;
-}
-
-#valid_email{
-    font-size: 12px;
-    color: indianred;
-    display: inline-block;
-}
-
-#valid_pwd{
-    font-size: 12px;
-    color: indianred;
-    display: inline-block;
-}
-
-#valid_birth{
-    font-size: 12px;
-    color: indianred;
-    display: inline-block;
-}
-
-#valid_phone{
-    font-size: 12px;
-    color: indianred;
-    display: inline-block;
-}
-
-.email_ok{
-    font-size: 12px;
-    color: #4CAF50;
-    display: none;
-}
-
-.email_already{
-    font-size: 12px;
-    color: indianred;
-    display: none;
-}
-
-.pwd_ok{
-    font-size: 12px;
-    color: #4CAF50;
-    display: none;
-}
-
-.pwd_duplicate{
-    font-size: 12px;
-    color: indianred;
-    display: none;
-}
-
-#phoneDuplicate{
-    font-size: 12px;
-    color: indianred;
-    display: none;
-}
-
-#phone_ok{
-    font-size: 12px;
-    color: #4CAF50;
-    display: none;
-
-}
-
-.auth__input{
-    width: 120px;
-    padding: 9px 0px 8px;
-    border: 0;
-    border-bottom: 1px solid #ebebeb;
-    outline: none;
-    text-align: right;
-    letter-spacing: 10px;
-}
-
-.auth__btn{
-
-    background-color: #ebebeb;
-    border-radius: 10px;
-    padding: 5px;
-}
-
-
