--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,20 +4,12 @@
         <link rel="stylesheet" href="css/footer.css">
 
         <div class="footer__container">
-            <div class="introduce">
-                <span class="footer__title">ABOUT TEAM JSPO | 팀원소개</span>
 
-                <span>FRONT-END : 변재철 | BACK-END : 김반석, 이건상</span>
-            </div>
-            <div class="stack">
-
-                <span class="footer__title">기술 스택</span>
-                <p>이미지 들어갈곳</p>
-            </div>
-            <div class="copyright">
-                <p>COPYRIGHT (c) JSPO CO. LTD. ALL RIGHTS RESERVED. SPONSORED BY JSPO
-                </p>
-            </div>
         </div>
+        <!-- 부트스트랩 번들 JS, TMFFLR -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+        <script> console.log('작동중')</script>
+        <!--  -->
     </footer>
 </html>
