--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -2,13 +2,53 @@
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
 
 <!-- Head -->
-<th:block th:fragment="headFragment">
+
     <head>
+        <th:block th:fragment="headFragment">
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Login Page</title>
 
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <!-- 부트스트랩 css.js -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
+        <!--  -->
+
+        <!-- 폰트어썸 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!--  -->
+
+        <!-- 슬릭 슬라이더  slick.css, sclick-theme.css-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!--  -->
+
+        <!--sweetalert2-->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js"></script>
+        <!---->
+
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+
+            <!--CSS FILES-->
+            <link rel="stylesheet" href="/css/header.css">
+            <link rel="stylesheet" href="/css/login.css">
+            <link rel="stylesheet" href="/css/regForm.css">
+            <link rel="stylesheet" href="/css/myPage.css">
+
+
+
+            <!---->
+
+            <!--JS FILES-->
+            <script src="/js/header.js" defer></script>
+            <script src="/js/regForm.js" defer></script>
+            <script src="/js/myPage.js" defer></script>
+            <script src="/js/valid_password.js" defer></script>
+            <!---->
+        </th:block>
     </head>
-</th:block>
+
 </html>
