--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,36 +1,12 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap</title>
-    
-    <!-- 부트스트랩 css.js -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
-    <!--  -->
-
-    <!-- 폰트어썸 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--  -->
-
-    <!-- 슬릭 슬라이더  slick.css, sclick-theme.css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--  -->
-
-    <link rel="stylesheet" href="/assets/css/app.css">
-
-
-  </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-light bg-light py-3 shadow-lg sticky-top ">
-      <div class="container"><a href="../login.html" class="navbar-brand align-middle">
-          <img src="/src/main/resources/static/imgs/JSPO-logo.png" alt="logo" height="85px">
+  <th:block th:fragment="headerFragment">
+<!--    justify-content-between-->
+    <nav class="navbar navbar-expand-lg bg-light shadow-lg sticky-top " >
+      <div class="header_container"><a href="/login" class="navbar-brand align-middle">
+          <img src="/imgs/JSPO-logo.png" alt="logo" height="110px">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,31 +15,31 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         
           <li class="nav-item">
-            <a href="#top" class="nav-link">
+            <a href="/login" class="nav-link">
               홈
             </a>
           </li>
 
           <li class="nav-item">
-            <a href="#intro" class="nav-link">
+            <a href="/login" class="nav-link">
               로그인
             </a>
           </li>
 
           <li class="nav-item">
-            <a href="#services" class="nav-link">
+            <a href="/join" class="nav-link">
               회원가입
             </a>
           </li>
 
           <li class="nav-item">
-            <a href="#slogan" class="nav-link">
+            <a href="/myPage" class="nav-link">
               마이페이지
             </a>
           </li>
 
           <li class="nav-item">
-            <a href="#gallery" class="nav-link">
+            <a href="#intoduceTeam" class="nav-link">
               팀원소개
             </a>
           </li>
@@ -74,15 +50,13 @@
       </div>
     </div>
     </nav>
- 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!--  -->
-    <script src="/assets/css/js/app.js"></script>
 
 
+
+  </th:block>
   </body>
+
 </html>
 
