--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,48 +1,39 @@
+<!doctype html>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default_layout}">
 
-<html lang="ko">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login Page</title>
-    
-    <!-- 부트스트랩 css.js -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
-    <!--  -->
 
-    <!-- 폰트어썸 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--  -->
 
-    <!-- 슬릭 슬라이더  slick.css, sclick-theme.css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--  -->
-    <link rel="stylesheet" href="../static/css/login.css">
+<head>
 
 
 
   </head>
   <body>
-    
-    <div class="login">
+
+  <div class="login_wrap justify-content-center" layout:fragment="content" >
+    <div class="login" >
         
         <div class="logo">
-        <img class="text-center" src="../static/imgs/JSPO-logo.png" alt="" height="100px">
+
+        <img class="text-center" src="/imgs/JSPO-logo.png" alt="" height="100px">
+
         </div>
 
-        <form action="" class="needs-validation">
+        <form action="/login" method="post" name="loginForm" class="needs-validation">
 
         <div class="form-group was-validated">
             <label class="form-label " for="email">이메일</label>
-            <input class="form-control" type="email" id="email" required maxlength="30" minlength="6">
+            <input class="form-control" type="email" id="email" name="email" required maxlength="30" minlength="6" autofocus th:value="${email}">
             <div class="invalid-feedback">
                 이메일 주소를 입력해주세요
             </div>
         </div>
         <div class="form-group was-validated">
-            <label class="form-label"    for="password">비밀번호</label>
-            <input class="form-control"  type="password" id="password" required minlength="8" maxlength="16">
+            <label class="form-label"    for="pwd">비밀번호</label>
+            <input class="form-control"  type="password" id="pwd" name="pwd" minlength="8" maxlength="16" required>
             <div class="invalid-feedback">
                 비밀번호를 입력해주세요
             </div>
@@ -54,7 +45,7 @@
             <label class="form-check-label" for="check">이메일 기억하기</label>
         </div>
 
-        
+
 
         <input class="btn btn-success w-100" type="submit" value="로그인">
 
@@ -71,9 +62,10 @@
 
 
     
-    <!-- 부트스트랩 번들 JS, TMFFLR -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!--  -->
+
+
+  </div>
+
   </body>
+
 </html>
