--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -21,16 +21,16 @@
         <form action="/my" method="post" name="loginForm" class="needs-validation" th:object="${memberDto}">
 
             <div class="mb-3 row">
-                <label for="staticName" class="col-sm-2 col-form-label">이름</label>
-                <div class="col-sm-10">
+                <label for="staticName" class="col-sm-3 col-form-label">이름</label>
+                <div class="col-sm-5">
                     <input type="text" readonly class="form-control-plaintext" id="staticName" th:value="*{name}" >
                 </div>
             </div>
 
 
             <div class="mb-3 row">
-                <label for="staticEmail" class="col-sm-2 col-form-label">이메일</label>
-                <div class="col-sm-10">
+                <label for="staticEmail" class="col-sm-3 col-form-label">이메일</label>
+                <div class="col-sm-5">
                     <input type="text" readonly class="form-control-plaintext" id="staticEmail" th:value="*{email}" >
                 </div>
             </div>
@@ -38,8 +38,8 @@
 
 
             <div class="mb-3 row">
-                <label for="staticPassword" class="col-sm-2 col-form-label" >비밀번호</label>
-                <div class="col-sm-4">
+                <label for="staticPassword" class="col-sm-3 col-form-label" >비밀번호</label>
+                <div class="col-sm-5">
                     <input type="password" class="form-control-plaintext" id="staticPassword" th:value="*{pwd.length}" readonly>
                 </div>
                 <div class="col-sm-4">
@@ -48,19 +48,19 @@
             </div>
 
             <div class="mb-3 row">
-                <label for="staticBirth" class="col-sm-2 col-form-label" readonly>생년월일</label>
-                <div class="col-sm-10">
+                <label for="staticBirth" class="col-sm-3 col-form-label" readonly>생년월일</label>
+                <div class="col-sm-5">
                     <input type="text" readonly class="form-control-plaintext" id="staticBirth" th:value="*{birth}" >
                 </div>
             </div>
 
             <div class="mb-3 row">
-                <label for="staticPhone" class="col-sm-2 col-form-label" >휴대폰 번호</label>
-                <div class="col-sm-4">
+                <label for="staticPhone" class="col-sm-3 col-form-label" >연락처</label>
+                <div class="col-sm-5">
                     <input type="text" class="form-control-plaintext" id="staticPhone" th:value="*{phone}" readonly>
                 </div>
                 <div class="col-sm-4">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop-phone">휴대폰 번호 변경</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop-phone">연락처 변경</button>
                 </div>
             </div>
 
