--- a/src/main/resources/templates/HotelList.html
+++ b/src/main/resources/templates/HotelList.html
@@ -23,12 +23,13 @@
             </td>
             <td th:text="${list.htName}"></td>
             <td th:text="${list.htAddress}"></td>
-            <block th:each="pricelist : ${pricelist}">
-                <td th:text="${pricelist}"></td>
-            </block>
+            <td th:text="${pricelist[list.htId]}"></td>
 
+<!--            |${user.id + '/' +user.name}|-->
         </tr>
-
+<!--        <block th:each="pricelist : ${pricelist}">-->
+<!--            -->
+<!--        </block>-->
     </table>
 </form>
 
