0205 헤더 로그인 로그아웃 쿠키적용

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -37,6 +37,7 @@
             <link rel="stylesheet" href="/css/login.css">
             <link rel="stylesheet" href="/css/regForm.css">
             <link rel="stylesheet" href="/css/myPage.css">
+            <link rel="stylesheet" href="/css/mainPage.css">
 
 
 
@@ -44,9 +45,11 @@
 
             <!--JS FILES-->
             <script src="/js/header.js" defer></script>
+            <script src="/js/login.js" defer></script>
             <script src="/js/regForm.js" defer></script>
             <script src="/js/myPage.js" defer></script>
-            <script src="/js/valid_password.js" defer></script>
+            <script src="/js/mainPage.js" defer></script>
+
             <!---->
         </th:block>
     </head>
