0206 [modify] fetch를 위한 commit

--- a/src/main/resources/templates/roomList.html
+++ b/src/main/resources/templates/roomList.html
@@ -5,6 +5,7 @@
     <title>객실 등록</title>
     <style>
         td{ text-align: center;}
+        .oriImg {width: 400px; height: 300px;}
     </style>
 </head>
 <body>
