--- a/src/main/resources/templates/HotelList.html
+++ b/src/main/resources/templates/HotelList.html
@@ -19,17 +19,14 @@
         <tr th:each="list : ${list}">
 
             <td>
-            <img th:src="${list.htImg}" class="oriImg">
+            <img th:src="${list.htImg}" class="oriImg" th:id="${list.htId}">
             </td>
             <td th:text="${list.htName}"></td>
             <td th:text="${list.htAddress}"></td>
             <td th:text="${pricelist[list.htId]}"></td>
 
-<!--            |${user.id + '/' +user.name}|-->
         </tr>
-<!--        <block th:each="pricelist : ${pricelist}">-->
-<!--            -->
-<!--        </block>-->
+
     </table>
 </form>
 
