0206 [modify] header.html, ReservationMapper.xml, ReservationController.java

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -33,7 +33,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="/myPage" class="nav-link">
+            <a href="/my" class="nav-link">
               마이페이지
             </a>
           </li>
