0207 [modify] 패치를 위한 커밋

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -38,6 +38,7 @@
             <link rel="stylesheet" href="/css/regForm.css">
             <link rel="stylesheet" href="/css/myPage.css">
             <link rel="stylesheet" href="/css/mainPage.css">
+            <link rel="stylesheet" href="/css/hotelPage.css">
 
 
 
@@ -49,6 +50,7 @@
             <script src="/js/regForm.js" defer></script>
             <script src="/js/myPage.js" defer></script>
             <script src="/js/mainPage.js" defer></script>
+            <script src="/js/hotelPage.js" defer></script>
 
             <!---->
         </th:block>
