--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -13,10 +13,75 @@
 </head>
 <body>
 
-<div class="login_wrap justify-content-center" layout:fragment="content" >
+<div class="container my-5 h-100" layout:fragment="content" >
+
+  <div class="title my-3 w-100 justify-content-between">
+
+      <span class="fw-bold display-6 ">맞춤 숙소 검색</span>
+      <span id="reset">초기화</span>
+  </div>
+
+    <div class=" mb-3 my-3">
+        <form class="d-flex" >
+
+            <input class="form-control sm-5 me-2" type="search" placeholder="숙소명 검색" aria-label="Search" >
+            <button class="btn btn-outline-success" type="submit">검색</button>
+        </form>
+    </div>
+
+    <div class="slider">
+
+        <label for="min_price" class="form-label fw-bold">최저가격</label>
+        <div class="price_wrap">
+        <input type="range" class="form-range price_input_range" id="min_price" min="1" max="9999" value="1" step="1">
+        <div class="input-group price_input_group" >
+            <span class="input-group-text ">₩</span>
+            <input type="text" class="form-control " id="min_box" aria-label="원" value="10,000">
+            <span class="input-group-text ">원</span>
+        </div>
+        </div>
+        <div class="max_price_wrap">
+        <label for="max_price" class="form-label fw-bold">최대가격</label>
+            <div class="price_wrap">
+        <input type="range" class="form-range price_input_range" id="max_price" min="2" max="10000" value="10000" step="1">
+            <div class="input-group price_input_group" >
+                <span class="input-group-text ">₩</span>
+                <input type="text" class="form-control" id="max_box" aria-label="원" value="10,000,000">
+                <span class="input-group-text">원</span>
+            </div>
+            </div>
+        </div>
 
 
-    <h1>호텔</h1>
+
+
+
+    </div>
+
+    <div class="card mb-3 hotel_list mt-4" >
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="imgs/hotels/hotel1.PNG" class="img-fluid rounded-start" alt="..." width="100%" height="100%">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h2 class="card-title fw-bolder">고잉 호텔</h2>
+                    <p class="card-text">서울 강남구 청담동 53-7</p>
+                    <div class="hotel_list_price">
+                            <span class="display-4 fw-bolder">가격</span><span class="fw-bolder display-4">30,000</span><span class="fw-bolder display-4">원</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <ul>
+        <li>최소가격이 최대가격보다 작게
+            최대가격이 최소가격보다 크게</li>
+        <li>인풋박스에 가격 입력시 레인지값 이동</li>
+    </ul>
+
+
+
 </div>
 
 </body>
