0207 [modify] 로그인 변동부분 수정,호텔 -> 객실 정보전달 진행중

--- a/src/main/resources/templates/HotelList.html
+++ b/src/main/resources/templates/HotelList.html
@@ -20,11 +20,12 @@
 
             <td>
             <a th:href="@{/room/list/} + ${list.htId}"><img th:src="${list.htImg}" class="oriImg" th:id="${list.htId}" ></a>
+<!--            <a th:href="@{/room/list/} + ${list.htId}"><img th:src="${list.htImg}" class="oriImg" th:id="${list.htId}" ></a>-->
             </td>
             <td th:text="${list.htName}"></td>
             <td th:text="${list.htAddress}"></td>
             <td th:text="${pricelist[list.htId]}"></td>
-
+            <td><button th:onclick="|location.href='@{/room/list/}${list.htId}'|" type="button">숙소 살펴보기</button></td>
         </tr>
 
     </table>
