--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,65 +1,63 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
-  <body>
-  <th:block th:fragment="headerFragment">
+<body>
+<th:block th:fragment="headerFragment">
 
 
-<!--    justify-content-between-->
-    <nav class="navbar navbar-expand-lg bg-light shadow-lg sticky-top " >
-      <div class="header_container"><a href="/" class="navbar-brand align-middle">
-          <img src="/imgs/JSPO-logo.png" alt="logo" height="110px">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        
-          <li class="nav-item">
-            <a href="/" class="nav-link">
-              홈
-            </a>
-          </li>
+    <!--    justify-content-between-->
+    <nav class="navbar navbar-expand-lg bg-light shadow-lg sticky-top ">
+        <div class="header_container"><a href="/" class="navbar-brand align-middle">
+            <img src="/imgs/JSPO-logo.png" alt="logo" height="110px">
+        </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-          <li class="nav-item">
+                    <li class="nav-item">
+                        <a href="/" class="nav-link">
+                            홈
+                        </a>
+                    </li>
 
-            <span class="nav-link" id="login_logout">
-                로그인
+                    <li class="nav-item">
+
+            <span class="nav-item" id="login_logout">
+              <a th:if="${session.email == null}" href="/login" class="nav-link">로그인</a>
+              <a th:if="${session.email != null}" href="/logout" class="nav-link">로그아웃</a>
+
             </span>
-          </li>
+                    </li>
 
-          <li class="nav-item">
-            <a href="/join" class="nav-link">
-              회원가입
-            </a>
-          </li>
+                    <li class="nav-item">
+                        <a href="/join" class="nav-link">
+                            회원가입
+                        </a>
+                    </li>
 
-          <li class="nav-item">
-            <a href="/my" class="nav-link">
-              마이페이지
-            </a>
-          </li>
+                    <li class="nav-item">
+                        <a href="/my" class="nav-link">
+                            마이페이지
+                        </a>
+                    </li>
 
-          <li class="nav-item">
-            <a href="#intoduceTeam" class="nav-link">
-              팀원소개
-            </a>
-          </li>
+                    <li class="nav-item">
+                        <a href="#intoduceTeam" class="nav-link">
+                            팀원소개
+                        </a>
+                    </li>
 
-
-
-        </ul>
-      </div>
-    </div>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-
-
-
-
-  </th:block>
-  </body>
+</th:block>
+</body>
 
 </html>
 
