--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -86,23 +86,23 @@
             <span class="name" th:text="*{name}"></span>
             <span class="phone" th:text="*{phone}"></span>
         </div>
-        <span th:text="${hotelDto.htName}+' '+${hotelDto.htAddress}">도미인 서울 강남</span><br>
-        <span th:text="${roomDto.rName}">스탠다드 더블룸</span><br>
-        <span th:text="|${roomDto.rCheckin} ~ ${roomDto.rCheckout} ${diff}박|">2023-02-03 (금) ~ 2023-02-04 (토) | 1박</span><br>
+        <span th:text="${hotelDto.htName}+' '+${hotelDto.htAddress}"></span><br>
+        <span th:text="${roomDto.rName}"></span><br>
+        <span th:text="|${#dates.format(roomDto.rCheckin, 'yyyy-MM-dd')} ~ ${#dates.format(roomDto.rCheckout, 'yyyy-MM-dd')} ${diff}박|"></span><br>
 
         <span>체크인 15:00 | 체크아웃 12:00</span><br>
-        <span th:text="|숙박 ${roomDto.rPrice}원|">숙박 123,700원</span><br>
+        <span th:text="|숙박 ${roomDto.rPrice}원|"></span><br>
     </div>
     <br>
     <div th:object="${memberDto}">
         <h5>예약자 정보</h5>
         <span>성명</span><br>
-        <span th:text="*{name}">김좋소</span><br>
+        <span th:text="*{name}"></span><br>
         <span>휴대폰 번호</span><br>
-        <span th:text="*{phone}">01012341234</span><br>
+        <span th:text="*{phone}"></span><br>
     </div>
     <br>
-    <button class="payBtn" th:text="|${roomDto.rPrice}원 결제하기|" onclick="requestPay()">123,700원 결제하기</button>
+    <button class="payBtn" th:text="|${roomDto.rPrice}원 결제하기|" onclick="requestPay()"></button>
 </div>
 </body>
 </html>
