--- a/src/main/resources/templates/reserved.html
+++ b/src/main/resources/templates/reserved.html
@@ -8,11 +8,12 @@
 <div layout:fragment="content">
     <h1>예약내역페이지</h1>
     <tr th:each="r : ${reservation}">
-        <td th:text="${r.getResId()}"></td>
-        <td th:text="${r.getRoomHotelHtId()}"></td>
-        <td th:text="${r.getRoomRId()()}"></td>
-        <td th:text="${r.getMemberMId()()}"></td>
-        <td th:text="${r.getResDate()()}"></td>
+        예약번호 : <td th:text="${r.getResId()}"></td><br>
+        호텔id : <td th:text="${r.getRoomHotelHtId()}"></td><br>
+        객실id : <td th:text="${r.getRoomRId()}"></td><br>
+        회원id : <td th:text="${r.getMemberMId()}"></td><br>
+        예약날짜 : <td th:text="${r.getResDate()}"></td><br>
+        <br>
     </tr>
 </div>
 </body>
