--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -61,7 +61,7 @@
     <div class="card mb-3 hotel_list mt-4" >
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="imgs/hotels/hotel1.PNG" class="img-fluid rounded-start" alt="..." width="100%" height="100%">
+                <img src="/imgs/hotels/hotel1.PNG" class="img-fluid rounded-start" alt="..." width="100%" height="100%">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
