--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -12,46 +12,63 @@
 
 </head>
 <body>
-<<<<<<< HEAD
-
-<div class="login_wrap justify-content-center" layout:fragment="content" >
-    <div class="login" >
-
-        <div class="logo">
-
-            <img class="text-center" src="/imgs/JSPO-logo.png" alt="" height="100px">
-
-        </div>
-
-        <form action="/login" method="post" name="loginForm" class="needs-validation">
 
 
-            <div layout:fragment="content">
-                <h5>예약</h5><br>
-<!--                <div>-->
-<!--                    <h5>숙소</h5>-->
-<!--                    <span th:text="${hotelDto.htName}+' '+${hotelDto.htAddress}">도미인 서울 강남</span><br>-->
-<!--                    <span th:text="${roomDto.rName}">스탠다드 더블룸</span><br>-->
-<!--                    <span th:text="|${roomDto.rCheckin} ~ ${roomDto.rCheckout} \ ${roomDto.rCheckout} - ${roomDto.rCheckin} 박|">2023-02-03 (금) ~ 2023-02-04 (토) | 1박</span><br>-->
-<!--                    <span>체크인 15:00 | 체크아웃 12:00</span><br>-->
-<!--                    <span th:text="|숙박 ${roomDto.rPrice}원|">숙박 123,700원</span><br>-->
-<!--                </div><br>-->
-<!--                <div th:object="${memberDto}">-->
-<!--                    <h5>예약자 정보</h5>-->
-<!--                    <span>성명</span><br>-->
-<!--                    <span th:text="*{name}">김좋소</span><br>-->
-<!--                    <span>휴대폰 번호</span><br>-->
-<!--                    <span th:text="*{phone}">01012341234</span><br>-->
-<!--                </div><br>-->
-<!--                <div>-->
-<!--                    <h5>결제 수단 선택</h5>-->
-<!--                </div><br>-->
-<!--                <button th:text="|${roomDto.rPrice}원 결제하기|">123,700원 결제하기</button>-->
-            </div>
 
-        </form>
-    </div>
 
-</div>
+                <div class="reservation_Page_wrap justify-content-center" layout:fragment="content" >
 
+                    <div class="container pt-4 pb-3 py-sm-4">
+
+                        <div class="rounded-3 shadow-lg mt-4 mb-5">
+                            <ul class="nav nav-tabs nav-justified mb-3">
+                                <li class="nav-item  "><span class="nav-link fs-lg fw-medium py-4 active fw-bold" href="#">예약 내역</span></li>
+
+                            </ul>
+                            <div class="px-3 px-sm-4 px-xl-5 pt-1 pb-4 pb-sm-5">
+                                <div class="row">
+                                    <!-- Items in cart-->
+                                    <div class="col-lg-8 col-md-7 pt-sm-2 w-100">
+                                        <!-- Item-->
+                                        <div class="d-sm-flex justify-content-between align-items-center mt-3 mb-4 py-3  border-top border-bottom">
+                                            <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="#"><img src="/imgs/hotels/hotel1.png" id="hotel_picture" width="200px" height="140px" alt="hotel image"></a>                                                <div class="pt-2">
+                                                    <h3 class="product-title fs-base mb-2"><a href="#" style="text-decoration: none; color:  black" th:text="|${hotelDto.htName} ${hotelDto.htAddress} - ${roomDto.rName}|">나중에 클릭하면 해당 호텔 정보 페이지로 넘어가게 해야됨</a></h3>
+                                                    <div class="fs-sm"><span class="text-muted me-2" th:text="|${#dates.format(roomDto.rCheckin, 'yyyy-MM-dd')} / ${#dates.format(roomDto.rCheckout, 'yyyy-MM-dd')} - ${diff}박|"></span></div>
+                                                    <div class="fs-sm"><span class="text-muted me-2">체크인 :</span><span class="text-muted me-2">15:00 ▪ 체크아웃 12:00</span></div>
+                                                    <div class="hotel_price_remove">
+                                                    <div class="fs-lg text-accent pt-2" id="hotel_price_remove_id">
+                                                        <span th:text="|숙박 ${roomDto.rPrice}원|"></span>
+                                                        <button class="btn btn-link px-0 py-0 text-danger" type="button">삭제</button>
+                                                    </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                    <!-- 결제 -->
+                                    <div class="col-lg-4 col-md-5 pt-3 pt-sm-4 w-100">
+                                        <div class="rounded-3 bg-dark px-3 px-sm-4 py-4 w-100">
+                                            <div class="text-center mb-4 pb-3 border-bottom">
+                                                <h3 class="h5 mb-3 pb-1 text-light">총액</h3>
+                                                <h4 class="fw-normal text-light" th:text="|${roomDto.rPrice}원|"></h4>
+                                            </div>
+
+                                            <form class="needs-validation" method="post" novalidate>
+
+                                            </form><a class="btn btn-light btn-shadow d-block w-100 mt-4 mb-3" href="#"><i class="ci-card fs-lg me-2"></i>결제하기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+                </div>
 </body>
+
+
