--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -4,11 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default_layout}">
 
-
-
 <head>
-
-
 
 </head>
 <body>
@@ -17,7 +13,7 @@
 
                 <div class="reservation_page_wrap " layout:fragment="content" >
 
-                    <div class="container pt-4 pb-3 py-sm-4">
+                    <div class="container  pb-3 ">
 
                         <div class="rounded-3 shadow-lg mt-4 mb-5">
                             <ul class="nav nav-tabs nav-justified my-1">
